--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/in-app-browser": "^5.24.0",
     "@ionic-native/native-geocoder": "^5.24.0",
     "@ionic-native/network": "^5.24.0",
+    "@ionic-native/screen-orientation": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -48,9 +49,11 @@
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-nativegeocoder": "^3.4.0",
     "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^7.14.1",
+    "es6-promise-plugin": "^4.2.2",
+    "firebase": "^7.14.2",
     "ionic-selectable": "^4.5.0",
     "leaflet": "^1.6.0",
     "mapbox-gl": "^1.9.1",
@@ -121,7 +124,8 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
